<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/devBackColor"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="165dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="25dp"
        android:background="@drawable/twowebgrayr"/>

    <EditText
        android:id="@+id/editTextWeb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/devTransparent"
        android:textColor="@color/devTextColor"
        android:textColorHint="@color/devTextHintColor"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:hint="@string/oneWeb"
        android:autofillHints="@string/empty"
        android:inputType="textWebEditText" />

    <EditText
        android:id="@+id/editTextWeb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/devTransparent"
        android:textColor="@color/devTextColor"
        android:textColorHint="@color/devTextHintColor"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:hint="@string/otherWeb"
        android:autofillHints=""
        android:inputType="textWebEditText" />

    <Button
        android:id="@+id/btnGoToWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/goToWebs"/>

    <Button
        android:id="@+id/btnEraseWebs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/eraseWebs"/>

    <Button
        android:id="@+id/btnDefaultWebs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="190dp"
        android:text="@string/demo"/>
</FrameLayout>